--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>Quadrinhos 1000</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">	
+	<link rel ="icon" href ="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F5b%2Fae%2F0f%2F5bae0f8487d20e9288ed401397758c19.jpg" type="image/x-icon"> 
 </head>
 <body>
 	<div class="container">
